# MealPlan

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: config.py  db.py  main.py  models.py  normalize.py  routes_plan.py  templating.py  units.py  views.py
app/extraction/: extract.py  pipeline.py  rasterize.py
app/planning/: generate.py  pantry.py  shopping.py
app/templates/: _plan_cell.html  _plan_row.html  _shop_row.html  base.html  library.html  plan.html  recipe.html  shopping.html  tesco_match.html  tesco_review.html
app/tesco/: basket.py  packs.py  routes.py  substitutions.py
scripts/: ingest.py  seed_demo.py  tesco_cdp_test.py  tesco_login.py  tesco_match.py
